istio/cert-manager/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
  - "blah.services.trimblevisibility.tech"
  gateways:
  - istio-custom-gateway
  http:
  - route:
    - destination:
        host: trimbletransportation-visibility-carrierportal-test
